# denta-monorepo

./: .env.example  .gitignore  README.md  SECURITY.md  apagar.bat  diagnose_db.py  docker-compose.yml  dump_debug.py  iniciar.bat  iniciar.ps1  reset_env.py  test_auth.py
.agents/workflows/: start-app.md
denta-server/: .env.example  Dockerfile  check_db.py  odontogram_schema.sql  pyproject.toml  requirements.txt
denta-server/app/: __init__.py  main.py
denta-server/app/core/: __init__.py  config.py  security.py  supabase_client.py
denta-server/app/middleware/: tenant.py
denta-server/app/routers/: appointments.py  auth.py  availability.py  bookings.py  clinics.py  health.py  odontograms.py  patients.py
denta-server/app/schemas/: __init__.py  appointment.py  availability.py  booking.py  clinic.py  odontogram.py  patient.py  user.py
denta-web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
denta-web/public/: manifest.json
denta-web/src/: App.tsx  index.css  vite-env.d.ts
denta-web/src/components/auth/: ProtectedRoute.tsx  (+1 more)
denta-web/src/hooks/: useAppointments.ts  useAvailability.ts  useBookings.ts  useClinic.ts  useOdontograms.ts  usePatients.ts
denta-web/src/lib/: api.ts  supabase.ts  whatsapp.ts
denta-web/src/pages/: Dashboard.css  Dashboard.tsx  Onboarding.tsx
denta-web/src/services/: agenda.ts  auth.ts  citas.ts  pacientes.ts
denta-web/src/stores/: auth.ts
docs/: supabase_setup.md
docs/migrations/: 001_initial_schema.sql  002_rls_policies.sql
(+26 files in other folders)
